# cpplint-cpp

./: .dockerignore  .gitattributes  .gitignore  CPPLINT.cfg  Dockerfile  LICENSE  MANIFEST.in  README.md  benchmark.py  memory_usage.sh  meson.build  meson_options.txt  packages.html  setup.cfg  setup.py
.github/: FUNDING.yml
.github/workflows/: benchmark.yml  build_whl.yml  check_glibc_compatibility.sh  ci.yml
benchmark/: benchmark.py  memory_usage.sh
docs/: BENCHMARK.md  CHANGELOG.md  CONTRIBUTING.md  README.md
include/: CPPLINT.cfg  ThreadPool.h  c_header_list.h  cleanse.h  common.h  cpplint.h  cpplint_state.h  error_suppressions.h  file_linter.h  getline.h  glob_match.h  line_utils.h  nest_info.h  options.h  regex_utils.h  states.h  string_utils.h
presets/: release.ini
src/: cleanse.cpp  cpplint.cpp  cpplint_state.cpp  file_linter.cpp  getline.cpp  glob_match.cpp  line_utils.cpp  nest_info.cpp  options.cpp  regex_utils.cpp  states.cpp  string_utils.cpp  version.h.in
tests/: CPPLINT.cfg  file_test.cpp  glob_test.cpp  lines_test.cpp  meson.build  regex_test.cpp  string_test.cpp
tests/test_files/: crlf.c  invalid_utf.c  meson.build  nullbytes.c
